fixed spacing

--- a/studio3/styles.css
+++ b/studio3/styles.css
@@ -27,7 +27,7 @@
   }
 
   #pointer {
-    /* bottom:30%; */
+    bottom: 30%;
     right: 21%;
   }
 
